✨ [feat]: 로그 xml