@@ -1,27 +1,33 @@
 package com.pickone.domain.messaging.service;
 
-import com.pickone.domain.messaging.dto.MessageDto;
-import com.pickone.domain.messaging.model.document.MessageDocument;
+import com.pickone.domain.messaging.document.Message;
+import com.pickone.domain.messaging.dto.MessageResponse;
+import com.pickone.domain.messaging.mapper.MessageMapper;
 import com.pickone.domain.messaging.repository.MessageAggregationRepository;
 import com.pickone.domain.messaging.repository.MessageReadStatusMongoRepository;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.mockito.*;
 
-import java.util.Arrays;
-import java.util.Collections;
+import java.time.LocalDateTime;
 import java.util.List;
 
-import static org.assertj.core.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 class MessageQueryServiceTest {
 
-  @Mock private MessageAggregationRepository messageAggregationRepository;
-  @Mock private MessageReadStatusMongoRepository readStatusRepository;
+  @InjectMocks
+  private MessageQueryService messageQueryService;
 
-  @InjectMocks private MessageQueryService sut;
+  @Mock
+  private MessageAggregationRepository messageAggregationRepository;
+
+  @Mock
+  private MessageReadStatusMongoRepository readStatusRepository;
+
+  @Mock
+  private MessageMapper messageMapper;
 
   @BeforeEach
   void setUp() {
@@ -29,53 +35,43 @@ class MessageQueryServiceTest {
   }
 
   @Test
-  @DisplayName("getMessages: 메시지 리스트를 DTO로 반환")
   void getMessages_success() {
-    Long roomId = 10L;
+    // given
+    Long roomId = 1L;
+    Message message1 = mock(Message.class);
+    Message message2 = mock(Message.class);
+    List<Message> messageList = List.of(message1, message2);
 
-    MessageDocument doc1 = mock(MessageDocument.class);
-    MessageDocument doc2 = mock(MessageDocument.class);
-    List<MessageDocument> docs = Arrays.asList(doc1, doc2);
+    MessageResponse response1 = new MessageResponse(roomId, 1L, List.of(2L), "Hi", LocalDateTime.now());
+    MessageResponse response2 = new MessageResponse(roomId, 2L, List.of(1L), "Hello", LocalDateTime.now());
+    List<MessageResponse> expectedResponses = List.of(response1, response2);
 
-    when(messageAggregationRepository.findAllByRoomId(roomId)).thenReturn(docs);
+    when(messageAggregationRepository.findAllByRoomId(roomId)).thenReturn(messageList);
+    when(messageMapper.toResponseList(messageList)).thenReturn(expectedResponses);
 
-    MessageDto dto1 = mock(MessageDto.class);
-    MessageDto dto2 = mock(MessageDto.class);
+    // when
+    List<MessageResponse> result = messageQueryService.getMessages(roomId);
 
-    try (MockedStatic<MessageDto> msgDtoStatic = mockStatic(MessageDto.class)) {
-      msgDtoStatic.when(() -> MessageDto.of(doc1)).thenReturn(dto1);
-      msgDtoStatic.when(() -> MessageDto.of(doc2)).thenReturn(dto2);
-
-      List<MessageDto> result = sut.getMessages(roomId);
-
-      assertThat(result).containsExactly(dto1, dto2);
-      verify(messageAggregationRepository).findAllByRoomId(roomId);
-    }
-  }
-
-  @Test
-  @DisplayName("getMessages: 메시지가 없으면 빈 리스트 반환")
-  void getMessages_empty() {
-    Long roomId = 11L;
-    when(messageAggregationRepository.findAllByRoomId(roomId)).thenReturn(Collections.emptyList());
-
-    List<MessageDto> result = sut.getMessages(roomId);
-
-    assertThat(result).isEmpty();
+    // then
+    assertEquals(2, result.size());
     verify(messageAggregationRepository).findAllByRoomId(roomId);
+    verify(messageMapper).toResponseList(messageList);
   }
 
   @Test
-  @DisplayName("countUnread: 읽지 않은 메시지 수 반환")
   void countUnread_success() {
-    Long roomId = 12L, userId = 22L;
-    long count = 7L;
+    // given
+    Long roomId = 1L;
+    Long userId = 2L;
+    long unreadCount = 3L;
 
-    when(readStatusRepository.countByRoomIdAndUserIdAndIsReadFalse(roomId, userId)).thenReturn(count);
+    when(readStatusRepository.countByRoomIdAndUserIdAndIsReadFalse(roomId, userId)).thenReturn(unreadCount);
 
-    long result = sut.countUnread(roomId, userId);
+    // when
+    long result = messageQueryService.countUnread(roomId, userId);
 
-    assertThat(result).isEqualTo(count);
+    // then
+    assertEquals(unreadCount, result);
     verify(readStatusRepository).countByRoomIdAndUserIdAndIsReadFalse(roomId, userId);
   }
 }
